--- a/SPS Website/updates.html
+++ b/SPS Website/updates.html
@@ -2,35 +2,34 @@
 <html lang="en">
 
 <head>
-	<meta charset="utf-8">
-	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	    <meta name="viewport" content="width=device-width, initial-scale=1">
-	    <meta name="description" content="">
-	    <meta name="author" content="">
+    <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="">
 
-	    <!-- Bootstrap Core CSS -->
-	    <link href="css/bootstrap.min.css" rel="stylesheet">
+        <!-- Bootstrap Core CSS -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
 
-	    <!-- Custom CSS -->
-	    <link href="css/business-casual.css" rel="stylesheet">
+        <!-- Custom CSS -->
+        <link href="css/business-casual.css" rel="stylesheet">
 
-	    <!-- Fonts -->
-	    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
-	    <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
 
-	    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	    <!--[if lt IE 9]>
-	        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-	        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-	    <![endif]-->
+        <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+        <!--[if lt IE 9]>
+            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
 
-	    <title>Updates</title>
+        <title>Updates</title>
 
-	</head>
+    </head>
 
 <body>
-	<!--HEADER SAME-->
     <!--Main banner-->
     <div class="brand">UCLA Society of Physics Students</div>
     <div class="address-bar">The one and only undergrad physics club @ UCLA |<a href="https://www.facebook.com/groups/UCLA.SPS/"><font color = "#00bfFF">Facebook</font></a></div>
@@ -84,12 +83,12 @@
             <!-- /.navbar-collapse -->
         </div> <!--navi container-->
      </nav>
-	 <!--HEADER ENDS-->
 
 
 
-	 <!--Update posts-->
-	 <div class="container">
+
+
+     <div class="container">
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
@@ -101,7 +100,7 @@
 
     <!--POSTS-->
                 <!--Post #?-->
-                <div class="col-lg-12 ">  <!--text-center-->                
+                <div class="col-lg-12 " >  <!--text-center-->                
                     <h2>SPS Fall Meeing #4: Arduino Workshop-part 1
                         <br>
                         <small>Nov 20, 2016</small>
@@ -122,7 +121,7 @@
                         <small>Nov 20, 2016</small>
                     </h2>
                     <p>Plasma Lab tour!</p>
-                    <img src="img/ard7.jpg" alt="" style="width: 600px; height:460px;">
+                   
                     <p>SPS went to westwood plasma lab facility...</p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
@@ -156,34 +155,21 @@
     </div>
     <!-- /.container -->
 
-
-
-
-<footer>
+    <footer>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Email <u>uclasps@gmail.com</u> for any questions, we'll get back to you asap!<br>
-                    </br><i>Copyright &copy; UCLA-SPS 2016.</i> Built with Bootstrap and <3 </p>
+                    <p>Copyright &copy; Your Website 2014</p>
                 </div>
             </div>
         </div>
-</footer>
+    </footer>
 
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
 
-
-<!-- jQuery -->
-<script src="js/jquery.js"></script>
-
-<!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
-
-<!-- Script to Activate the Carousel -->
-<script>
-$('.carousel').carousel({
-    interval: 5000 //changes the speed
-})
-</script>
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
 
 </body>
 
