--- a/SPS Website/index.html
+++ b/SPS Website/index.html
@@ -3,6 +3,7 @@
 <html lang ="en">
 
 <head>
+        
      <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -16,8 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>UCLA SPS</title>
-
-
+   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
     </head>
 
 <body>
@@ -59,9 +59,9 @@
                     </li>
 
                         <li>
-                            <a href="officer.html">Officers</a>
+                            <a href="officers.html">Officers</a>
                             <ul class ="dropdown">
-                                <li><a href="officer.html">2015-2016</a></li>
+                                <li><a href="officers.html">2015-2016</a></li>
                                 <li><a href="#">2014-2015</a></li>
                             </ul>
                         </li>
@@ -143,7 +143,11 @@
                 <hr>
                 <h2 class="intro-text text-center"> Get Involved:<strong> Regualer Meetings</strong></h2>
                 <hr>
-                <p>We meet on <b>Tuesday</b> evening from <b>6-7 pm</b> in <b>Knudsen 2-222 </b> during <b>ODD</b> weeks (week 1, 3, 5...) of the Fall, Spring, and Winter quarters. Free food is provided. There is nothing to sign up for; everyone, including non-physics majors, is welcome! Join our <u>mailing list</u> to get updates about upcoming club events.</p>
+                <p>We meet on <b>Tuesday</b> evening from <b>6-7 pm</b> in <b>Knudsen 2-222 </b> during <b>ODD</b> weeks (week 1, 3, 5...) of the Fall, Spring, and Winter quarters. Free food is provided. There is nothing to sign up for; everyone, including non-physics majors, is welcome! 
+                <br><br>Join our mailing list below to get updates about upcoming club events.</p>
+                <center>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdAtiIYprFBXjKrkGPYwEdHpCVZ1fZuGADIMRxWLtIJk11xAg/viewform?embedded=true" width="860" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                </center>
             </div>
         </div>
 
@@ -173,6 +177,7 @@
                 <h2 class="intro-text text-center"> <strong>Contact</strong> </h2>
                 <hr>
                 <p>Email <u>sps.ucla@gmail.com</u> for any questions, we'll get back to you ASAP! Officers can also be most effectively reached through the UCLA <a href="https://www.facebook.com/groups/UCLA.SPS/"><font color = "#1976d2"><u>SPS Facebook Group</u></a></font>.</p>
+
             </div>
         </div>
 
