--- a/SPS Website/about.html
+++ b/SPS Website/about.html
@@ -1,44 +1,33 @@
+<!--Scratch build-->
 <!DOCTYPE html>
-<html lang="en">
 
+<html lang ="en">
 <head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>About -SPS</title>
-
-    <!-- Bootstrap Core CSS -->
+     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom CSS -->
     <link href="css/business-casual.css" rel="stylesheet">
-
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+
+    <title>About SPS</title>
 
 </head>
 
 <body>
 
-    <div class="brand">UCLA SPS</div>
-   <!-- <div class="address-bar"></div> -->
+<!--HEADER SAME-->
+    <!--Main banner-->
+    <div class="brand">UCLA Society of Physics Students</div>
+    <div class="address-bar">The one and only undergrad physics club @ UCLA |<a href="https://www.facebook.com/groups/UCLA.SPS/"><font color = "#00bfFF">Facebook</font></a></div>
 
     <!-- Navigation -->
-  <nav class="navbar navbar-default" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
+     <nav class="navbar navbar-default" role="navigation">
+        <div class="container"> <!--navi container-->
+
+            <!-- Groupping toggle & banner better for Mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
@@ -46,27 +35,34 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Business Casual</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
+                <a class="navbar-brand" href="index.html">SPS</a> <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
+
+             </div> <!--Mobile display-->
+
+            <!-- Collecting the nav links for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
                         <a href="index.html">Home</a>
                     </li>
                     <li>
+                        <a href="updates.html">Updates</a>
+                    </li>
+                    <li>
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="blog.html">Updates</a>
+                        <a href="gallery.html">Gallery</a>
                     </li>
+                    
                     <li>
-                        <a href="about.html">Gallary</a>
+                        <a href="officers.html">Officers</a>
+                            <ul class ="dropdown">
+                                <li><a href="officer.html">2015-2016</a></li>
+                                <li><a href="#">2014-2015</a></li>
+                            </ul>
                     </li>
-                    <li>
-                        <a href="contact.html">Officers</a>
-                    </li>
+
                     <li>
                         <a href="contact.html">Documents</a>
                     </li>
@@ -74,29 +70,39 @@
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
+        </div> <!--navi container-->
+     </nav>
+ <!--HEADER ENDS-->
 
-    <div class="container">
-
+     <div class="container">
         <div class="row">
             <div class="box">
+                <!--Title text-->
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">About
-                        <strong>SPS</strong>
-                    </h2>
+                    <h2 class="intro-text text-center">About <strong>Society of Physics Students</strong></h2>
                     <hr>
-                </div>
+                </div> 
+                <!--Title text-->
+
                 <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="img/slide-2.jpg" alt="">
+                    <img class="img-responsive img-border-left" src="img/spslogo.jpg" alt="">
+                    <br>
+                    <img class="img-responsive img-border-left" src="img/ucla2.jpg" alt="" style="width: 550px; height:230px">
+                     <!--<img class="img-responsive img-border-left" src="img/ucla2.jpg" alt="" style="width: 550px; height:230px">-->
                 </div>
+
+                <!--Description text-->
                 <div class="col-md-6">
-                    <p>The Society of Physics Students is a national, inter-collegiate organization operating under the aegis of the American Institute of Physics. The objectives of the Society of Physics Students are to:
-a) encourage and assist students interested in physics to develop the knowledge, competence, enthusiasm, and the social responsibility essential to the advancement of physics.
-b) stimulate interest in the physical sciences. More specifically, SPS serves to widen the networks amongst the physics undergraduate student body and to increase the students’ interaction with the graduate and faculty members through colloquiums on the cutting-edge research occurring here at UCLA and beyond. SPS introduces younger members of the physics undergraduate student body to an active, engaging academic lifestyle through study groups and research experience.</p>
+                    <p>The <i>Society of Physics Students </i> is a national, inter-collegiate organization operating under the aegis of the American Institute of Physics (APS). 
+                    <br>The objectives of the Society of Physics Students are to:</br>
+                    <strong>a)</strong> Encourage and assist students interested in physics to develop the knowledge, competence, enthusiasm, and the social responsibility essential to the advancement of physics. <strong>b)
+                </strong> Stimulate interest in the physical sciences. 
+
+                    <br></br>
+                    More specifically, the <font color="00bfff">UCLA SPS </font> serves to widen the networks amongst the physics undergraduate student body and to increase the students’ interaction with the graduate and faculty members through colloquiums on the cutting-edge research occurring here at UCLA and beyond. SPS introduces younger members of the physics undergraduate student body to an active, engaging academic lifestyle through study groups and research experience. </br></br></p>
                 </div>
+
                 <div class="clearfix"></div>
             </div>
         </div>
@@ -105,54 +111,63 @@ b) stimulate interest in the physical sciences. More specifically, SPS serves to
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Our
-                        <strong>Team</strong>
-                    </h2>
+                    <h2 class="intro-text text-center"><strong>What We Do</strong></h2>
                     <hr>
                 </div>
+
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
-                    </h3>
+                    <p>Speakers...</p>
                 </div>
+
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
-                    </h3>
+                    <p>Experiments, Arduino workshops, activities</p>
                 </div>
+
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <h3>John Smith
-                        <small>Job Title</small>
-                    </h3>
+                    <p>Field trips to lab facilities: plaama lab, JPL...</p>
                 </div>
+
                 <div class="clearfix"></div>
             </div>
         </div>
+
+
+
 
     </div>
-    <!-- /.container -->
 
-<!--footer: contact email, copyrights -->
-   <footer>
+</body>
+
+
+<footer>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <p>Email <u>uclasps@gmail.com</u> for any questions, we'll get back to you asap!<br>
-                    </br>Copyright &copy; UCLA-SPS 2016</p>
+                    </br><i>Copyright &copy; UCLA-SPS 2016.</i> Built with Bootstrap and <3 </p>
                 </div>
             </div>
         </div>
-    </footer>
+</footer>
 
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
 
-</body>
+<!-- jQuery -->
+<script src="js/jquery.js"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.min.js"></script>
+
+<!-- Script to Activate the Carousel -->
+<script>
+$('.carousel').carousel({
+    interval: 5000 //changes the speed
+})
+</script>
+
 
 </html>
+
