--- a/SPS Website/updates.html
+++ b/SPS Website/updates.html
@@ -112,7 +112,7 @@
                     </h3>
                     <p>Time to enter the labyrinth!</p>
                     <img src="img/ard13.jpg" alt="" style="width: 600px; height:460px;">
-                    <p style="margin-left:5em;" align="left">This week at Society of Physics Students, students got to program a robot to navigate some treacherous mazes! Students are encourgaed to compete with friends to see whose code brings their robot to the end first! Challenge modes available for those eager to test their coding skills to the limit! And happy Thanksgiving everyone!</p>
+                    <p style="margin-left:5em;" align="left">This week at Society of Physics Students, students got to program a robot to navigate some treacherous mazes! Students are encourgaed to compete with friends to see whose code brings their robot to the end first! Challenge modes available for those eager to test their coding skills to the limit! And Happy Thanksgiving everyone (fyi turkeys taste yummier when cooked by eletrocution)!</p>
                     <hr>
                 </div>
                 <!--/Post #?-->
@@ -120,7 +120,7 @@
 
                 <!--Post #?-->
                  <div class="col-lg-12  text-center">  <!--text-center-->                
-                    <h3 style ="font-family: arial; font-weight: 500px;">[SPS Fall Meeting] Week7: Arduino Workshop Part 1
+                    <h3 style ="font-family: arial; font-weight: 500px;">[SPS Fall Meeting] Week 7: Arduino Workshop Part 1
                         <br>
                         <small>Nov 15, 2016</small>
                     </h3>
@@ -134,13 +134,13 @@
 
                 <!--Post #?-->
                 <div class="col-lg-12 text-center">  <!--text-center-->                
-                    <h3 style ="font-family: arial; font-weight: 500px;">[SPS Fall Meeing] Week 3: Plasma Lab tour
+                    <h3 style ="font-family: arial; font-weight: 500px;">SPS Fall Meeing Week 3: Plasma Lab tour
                         <br>
                         <small>Nov 9, 2016</small>
                     </h3>
-                    <p>Plasma Lab tour!</p>
+                    <p>Featuring the Large Plasma Device (LAPD)!</p>
                     <img src="img/plasma2.jpg" alt="" style="width: 600px; height:460px;">
-                    <p style="margin-left:5em;">This week SPS went to LAPD plasma lab facility in Westwood.</p>
+                    <p style="margin-left:5em;">This week SPS went to the Basic Plasma Science Facility in Westwood. Thanks Dr.Carter for the presenation and the lab tour!</p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
@@ -174,11 +174,11 @@
     </div>
     <!-- /.container -->
 
-    <footer>
+<footer>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>&copy; UCLA-SPS 2016. Built with Bootstrap and <3 </p>
                 </div>
             </div>
         </div>
