--- a/SPS Website/about.html
+++ b/SPS Website/about.html
@@ -56,12 +56,13 @@
                     </li>
                     
                     <li>
-                        <a href="officers.html">Officers</a>
+                            <a href="officers.html">Officers</a>
                             <ul class ="dropdown">
-                                <li><a href="officer.html">2015-2016</a></li>
-                                <li><a href="#">2014-2015</a></li>
+                                <li><a href="officers.html">2016-2017</a></li>
+                                <li><a href="#">2015-2016</a></li>
+                                <li><a href="officers1415.html">2014-2015</a></li>
                             </ul>
-                    </li>
+                        </li>
 
                     <li>
                         <a href="contact.html">Documents</a>
