--- a/SPS Website/officers.html
+++ b/SPS Website/officers.html
@@ -57,9 +57,16 @@
                     <li>
                         <a href="about.html">Gallary</a>
                     </li>
+
                     <li>
-                        <a href="officers.html">Officers</a>
-                    </li>
+                            <a href="officers.html">Officers</a>
+                            <ul class ="dropdown">
+                                <li><a href="officers.html">2016-2017</a></li>
+                                <li><a href="#">2015-2016</a></li>
+                                <li><a href="officers1415.html">2014-2015</a></li>
+                            </ul>
+                        </li>
+
                     <li>
                         <a href="contact.html">Documents</a>
                     </li>
