--- a/SPS Website/about.html
+++ b/SPS Website/about.html
@@ -6,13 +6,14 @@
      <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="css/business-casual.css" rel="stylesheet">
+    <link href="css/theme.css" rel="stylesheet">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
 
 
     <title>About SPS</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
 
 </head>
 
@@ -20,8 +21,9 @@
 
 <!--HEADER SAME-->
     <!--Main banner-->
-    <div class="brand">UCLA Society of Physics Students</div>
-    <div class="address-bar">The one and only undergrad physics club @ UCLA |<a href="https://www.facebook.com/groups/UCLA.SPS/"><font color = "#00bfFF">Facebook</font></a></div>
+    <div class="brand" style ="font-family: sans-serif; font-weight: 300px;"><img src="img/ucla2.jpg" style="width: 17%; height: 17%; opacity:0.92"> Society of Physics Students</div>
+    <div class="address-bar">Undergraduate physics club @ UCLA |<a href="https://www.facebook.com/groups/UCLA.SPS/"><font color = "#ffcc33"> Facebook</font></a>| <a href="https://twitter.com/uclasps/"><font color = "#ffcc33">Twitter</font></a></div>
+
 
     <!-- Navigation -->
      <nav class="navbar navbar-default" role="navigation">
@@ -66,6 +68,10 @@
 
                     <li>
                         <a href="documents.html">Documents</a>
+                        <ul class ="dropdown">
+                                <li><a href="arduino.html">•Arduino</a></li>
+                                <li><a href="logistics.html">•Logistics</a></li>
+                        </ul>
                     </li>
                    
                 </ul>
@@ -94,7 +100,7 @@
                 </div>
 
                 <!--Description text-->
-                <div class="col-md-6" style="font-family:verdana; font-size:13px">
+                <div class="col-md-6" style="font-family:verdana; font-size:14px">
                     <p>The <i>Society of Physics Students </i> is a national, inter-collegiate organization operating under the aegis of the American Institute of Physics (APS). 
                     The objectives of the Society of Physics Students are to:</br>
                     <strong>a)</strong> Encourage and assist students interested in physics to develop the knowledge, competence, enthusiasm, and the social responsibility essential to the advancement of physics. <strong>b)
@@ -114,21 +120,22 @@
                     <hr>
                     <h2 class="intro-text text-center"><strong>What We Do</strong></h2>
                     <hr>
+                    <center><p style ="font-family: arial; font-size: 16px;"> Weekly meetings during which we...</p></center>
                 </div>
 
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <p>Speakers...</p>
+                    <img class="img-responsive" src="img/talk1.jpg" alt="" style="height:100%; width:100%">
+                    <p>host speakers</p>
                 </div>
 
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <p>Experiments, Arduino workshops, activities</p>
+                      <img class="img-responsive" src="img/pump3.jpg" alt="" style="height:100%; width:100%">
+                    <p>do experiments, Arduino workshops, and other activities</p>
                 </div>
 
                 <div class="col-sm-4 text-center">
-                    <img class="img-responsive" src="http://placehold.it/750x450" alt="">
-                    <p>Field trips to lab facilities: plaama lab, JPL...</p>
+                      <img class="img-responsive" src="img/plasma.jpg" alt="" style="height:100%; width:100%">
+                    <p>visit lab facility: plasma lab, infrared lab, etc.</p>
                 </div>
 
                 <div class="clearfix"></div>
@@ -147,7 +154,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>&copy; UCLA-SPS 2016. Built with Bootstrap and <3 </p>
+                    <p style="font-family:verdana; font-size:13px">&copy; UCLA-SPS 2016 </p>
                 </div>
             </div>
         </div>
