--- a/SPS Website/officers1415.html
+++ b/SPS Website/officers1415.html
@@ -12,19 +12,21 @@
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="css/business-casual.css" rel="stylesheet">
+    <link href="css/theme.css" rel="stylesheet">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
 
     <title>Officers</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
 </head>
 
 
 <body>
 <!--Main banner-->
-    <div class="brand">UCLA Society of Physics Students</div>
-    <div class="address-bar">The one and only undergrad physics club @ UCLA |<a href="https://www.facebook.com/groups/UCLA.SPS/"><font color = "#00bfFF">Facebook</font></a></div>
+    <div class="brand" style ="font-family: sans-serif; font-weight: 300px;"><img src="img/ucla2.jpg" style="width: 17%; height: 17%; opacity:0.92"> Society of Physics Students</div>
+    <div class="address-bar">Undergraduate physics club @ UCLA |<a href="https://www.facebook.com/groups/UCLA.SPS/"><font color = "#ffcc33"> Facebook</font></a>| <a href="https://twitter.com/uclasps/"><font color = "#ffcc33">Twitter</font></a></div>
+
 
     <!-- Navigation -->
      <nav class="navbar navbar-default" role="navigation">
@@ -55,7 +57,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="about.html">Gallary</a>
+                        <a href="about.html">Gallery</a>
                     </li>
                     
                     <li>
@@ -69,6 +71,10 @@
 
                     <li>
                         <a href="documents.html">Documents</a>
+                         <ul class ="dropdown">
+                                <li><a href="arduino.html">•Arduino</a></li>
+                                <li><a href="logistics.html">•Logistics</a></li>
+                        </ul>
                     </li>
                    
                 </ul>
@@ -146,7 +152,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>&copy; UCLA-SPS 2016. Built with Bootstrap and <3 </p>
+                    <p style="font-family:verdana; font-size:13px">&copy; UCLA-SPS 2016 </p>
                 </div>
             </div>
         </div>
